me erku ban poxer em

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY='SG.2YoGKRmVSn2myuLY1Mve1A.Cu-kecu-2ho0lobLO3mUhpohRmuhM0gljndWmm53Ubo'
+SENDGRID_API_KEY='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'
